<resources>
    <string name="app_name">Hermes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_car_control">CarControl</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_register_account">RegisterAccount</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_create_account_details">CreateAccountDetails</string>

    <string name="title_activity_joystick">Joystick</string>
    <string name="angle_lab" />
    <string name="none" />
    <string name="power_lab" />
    <string name="direction_lab" />
    <string name="rights_lab" />
    <string name="front_lab" />
    <string name="front_right_lab" />
    <string name="right_lab" />
    <string name="right_bottom_lab" />
    <string name="bottom_lab" />
    <string name="bottom_left_lab" />
    <string name="left_lab" />
    <string name="left_front_lab" />
    <string name="center_lab" />
    <string name="title_activity_control_selection">ControlSelection</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_personal_information">ChangePersonalInformation</string>
    <string name="tab_text_1">Ongoing</string>
    <string name="tab_text_2">Done</string>

    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_save_updates">SaveUpdates</string>
    <string name="third_fragment_label">third_fragment_label</string>

    <string name="id">Id</string>
    <string name="title_activity_create_account_sv">create_account_sv</string>
    <string name="title_activity_test_swedish">test_swedish</string>



    <string name="ongoing">Ongoing</string>
    <string name="completed">completed</string>
    <string name="night_mode">Night mode</string>

</resources>